--- a/styles-beach.css
+++ b/styles-beach.css
@@ -125,6 +125,19 @@ body {
     color: #FFF;
 }
 
+.credits {
+    color: #0B1D27; 
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 0.375rem;
+    font-family: Montserrat;
+    font-weight: 500; 
+    padding-block-start: 1.44rem;
+    padding-block-end: 1.06rem;
+    box-sizing: border-box;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background: #0B1D27; 
@@ -239,6 +252,10 @@ body {
         position: absolute;
         font-size: 1.56rem;
         transform: translatey(10rem);
+    }
+
+    .credits {
+        font-size: 1rem;
     }
 }
 
