--- a/styles-beach.css
+++ b/styles-beach.css
@@ -1,74 +1,14 @@
-html {
-    scroll-behavior: smooth;
-  }
-
-body {
-    margin: 0 auto;
-}
+@import url(styles-global.css);
 
 .header-item {
     background-image: url(Beach-Assets/header-image.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 30vh;
-    margin: 0;
-    box-sizing: content-box;
-}
-
-.logo-header {
-    height: 5vh;
-    width: 8vw;
-    position: absolute;
-    inset-inline: 1rem;
-    inset-block: 0.75rem;
-    margin: 0;
 }
 
 .header-text {
-    display: flex;
     min-width: 70%;
-    justify-content: center;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: Montserrat;
-    font-size: 2.19rem; 
-    font-weight: 700; 
-    color: #FFF;
-    margin: 0;
-    position: relative;
-    inset-block-start: 35%;
-    user-select: none;
-    margin-block-end: auto;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    inset-inline-start: 0;
-    inset-inline-end: 0;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    font-family: Montserrat;
-    gap: 1.19rem;
-    padding: 1.13rem 1rem 0 1rem;
-    margin: 0;
-}
-
-.headings {
-    display: flex;
-    font-size: 1.5625rem; 
-    font-weight: 700;
-    text-transform: uppercase;
-    margin: 0 auto; 
-    width: 92vw;
 }
 
 .paragraph-style {
-    color: #0B1D27;
-    font-size: 0.95rem; 
-    font-weight: 500; 
-    width: 92vw;
     margin: auto;
 }
 
@@ -125,61 +65,7 @@ body {
     color: #FFF;
 }
 
-.credits {
-    color: #0B1D27; 
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 0.375rem;
-    font-family: Montserrat;
-    font-weight: 500; 
-    padding-block-start: 1.44rem;
-    padding-block-end: 1.06rem;
-    box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-    body {
-        background: #0B1D27; 
-    }
-
-    .headings {
-        color: #FFF;
-    }
-
-    .paragraph-style {
-        color: #FFF;
-    }
-
-    .credits {
-        color: #FFF;
-    }
-}
-
 @media (min-width: 1515px) {
-    .header-item {
-        height: 100vh;
-    }
-
-    .logo-header {
-        height: 8vh;
-        width: 8vw;
-        position: absolute;
-        inset-inline: 0.5rem;
-        inset-block: 1rem;
-    }
-
-    .header-text {
-        width: auto;
-        font-size: 6.25rem; 
-    }
-
-    .container {
-        gap: 2.56rem;
-        padding: 2.56rem 3.12rem 0 3.12rem;
-        margin: 0 12.5rem 0 12.5rem;
-    }
-
     .rows {
         display: flex;
         gap: 1.5rem;
@@ -189,27 +75,10 @@ body {
     }
 
     :is(.image1, .image2) {
-        display: flex;
         width: auto;
-        border-radius: 1.25rem;
         object-fit: cover;
         margin-inline-start: 0;
         margin-inline-end: 0;
-    }
-
-    .headings {
-        font-size: 4rem; 
-        margin: auto 5rem auto auto;  
-        width: 100%;
-    }
-
-    .paragraph-style {
-        font-size: 1.875rem; 
-        font-weight: 500; 
-        width: auto;
-        max-height: 100%;
-        margin: auto 5rem auto auto;
-        width: 100%;
     }
 
     :is(.image1, .image2, .image3, .image4, .image5) {
@@ -252,10 +121,6 @@ body {
         position: absolute;
         font-size: 1.56rem;
         transform: translatey(10rem);
-    }
-
-    .credits {
-        font-size: 1rem;
     }
 }
 
