--- a/styles-gardens.css
+++ b/styles-gardens.css
@@ -1,75 +1,15 @@
-html {
-    scroll-behavior: smooth;
-  }
-
-body {
-    margin: 0 auto;
-}
+@import url(styles-global.css);
 
 .header-item {
     background-image: url(Gardens-Assets/header-image.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 30vh;
-    margin: 0;
-    box-sizing: content-box;
-}
-
-.logo-header {
-    height: 5vh;
-    width: 8vw;
-    position: absolute;
-    inset-inline: 1rem;
-    inset-block: 0.75rem;
-    margin: 0;
 }
 
 .header-text {
-    display: flex;
     min-width: 70%;
-    justify-content: center;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: Montserrat;
-    font-size: 2.19rem; 
-    font-weight: 700; 
-    color: #FFF;
-    margin: 0;
-    position: relative;
-    inset-block-start: 35%;
-    user-select: none;
-    margin-block-end: auto;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    inset-inline-start: 0;
-    inset-inline-end: 0;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    font-family: Montserrat;
-    gap: 1rem;
-    padding: 1.13rem 1rem 0 1rem;
-    margin: 0;
-}
-
-.headings {
-    display: flex;
-    font-size: 1.5625rem; 
-    font-weight: 700;
-    text-transform: uppercase;
-    margin: 0 auto; 
-    width: 92vw;
 }
 
 .paragraph-style {
-    color: #0B1D27;
-    font-size: 0.95rem; 
-    font-weight: 500; 
-    width: 92vw;
-    margin: 0;
+    margin: 0 auto;
 }
 
 :is(.image1, .image2, .image3) {
@@ -80,34 +20,41 @@ body {
     margin: 0 auto 0 auto;
 }
 
+@media (min-width: 1515px) {
+    :is(.rows, .text-row) {
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+        align-items: center;
+    }
 
-.credits {
-    color: #0B1D27; 
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 0.375rem;
-    font-family: Montserrat;
-    font-weight: 500; 
-    padding-block-start: 1.44rem;
-    padding-block-end: 1.06rem;
-    box-sizing: border-box;
+    .rows {
+        gap: 2.5rem;
+    }
+
+    .text-row {
+        gap: 5.81rem;
+    }
+
+    .text-width {
+        max-width: 50%;
+    }
+
+    .image1 {
+        width: auto;
+        object-fit: cover;
+        margin-inline-start: 0;
+        margin-inline-end: 0;
+    }
+
+    .image2 {
+        width: 100%;
+        height: 63.31rem;
+    }
+
+    .image3 {
+        width: 100%;
+        height: 64rem;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-    body {
-        background: #0B1D27; 
-    }
-
-    .headings {
-        color: #FFF;
-    }
-
-    .paragraph-style {
-        color: #FFF;
-    }
-
-    .credits {
-        color: #FFF;
-    }
-}
