--- a/styles-gardens.css
+++ b/styles-gardens.css
@@ -20,6 +20,10 @@
     margin: 0 auto 0 auto;
 }
 
+#no-margin {
+    margin: 0;
+  }
+
 @media (min-width: 1515px) {
     :is(.rows, .text-row) {
         display: flex;
