--- a/styles-global.css
+++ b/styles-global.css
@@ -135,7 +135,7 @@ body {
   }
 
   .paragraph-style {
-    font-size: 1.875rem; 
+    font-size: 25px; 
     max-height: 100%;
     margin: auto 5rem auto auto;
     width: 100%;
@@ -146,7 +146,7 @@ body {
   }
 }
 
-@media (min-width: 1770px) {
+@media (min-width: 1771px) {
   .container {
     margin: 0 12.5rem 0 12.5rem;
   }
