--- a/Styles/styles-beach.css
+++ b/Styles/styles-beach.css
@@ -1,7 +1,7 @@
 @import url(styles-global.css);
 
 .header-item {
-    background-image: url(Beach-Assets/header-image.jpg);
+    background-image: url(.../Beach-Assets/header-image.jpg);
 }
 
 .header-text {
