Fixed broken links v2

--- a/Styles/styles-index.css
+++ b/Styles/styles-index.css
@@ -1,7 +1,7 @@
 @import url(styles-global.css);
 
 .header-item {
-    background-image: url(.../Index-Assets/header-image.jpg);
+    background-image: url(../Index-Assets/header-image.jpg);
 }
 
 .header-text {
