--- a/Styles/styles-index.css
+++ b/Styles/styles-index.css
@@ -116,6 +116,27 @@
         transition: all 500ms;
         transform: scale(1.05);
     }
+
+    #myBtn {
+        display: none; /* Hidden by default */
+        position: fixed; /* Fixed/sticky position */
+        bottom: 20px; /* Place the button at the bottom of the page */
+        right: 30px; /* Place the button 30px from the right */
+        z-index: 2; /* Make sure it does not overlap */
+        border: none; /* Remove borders */
+        outline: none; /* Remove outline */
+        background-color: #555; /* Set a background color */
+        color: white; /* Text color */
+        cursor: pointer; /* Add a mouse pointer on hover */
+        padding: 1rem 1rem 1rem 1rem; /* Some padding */
+        border-radius: 50%; /* Rounded corners */
+        font-size: 0.75rem; /* Increase font size */
+        margin: 0;
+      }
+      
+      #myBtn:hover {
+        transform: scale(1.05); /* Add a dark-grey background on hover */
+      }
 }
 
 
