--- a/Styles/styles-global.css
+++ b/Styles/styles-global.css
@@ -246,6 +246,27 @@ body {
   .secondlink {
     padding: 1rem 2rem 1rem 2rem;
   }
+
+  #topButton {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 2; 
+    border: none; 
+    outline: none;
+    background-color: #555; 
+    color: white; 
+    cursor: pointer; 
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 50%;
+    font-size: 0.75rem;
+    margin: 0;
+  }
+  
+#topButton {
+    transform: scale(1.05); 
+  }
 }
 
 @media (min-width: 1771px) {
