--- a/Styles/styles-gardens.css
+++ b/Styles/styles-gardens.css
@@ -20,9 +20,9 @@
     margin: 0 auto 0 auto;
 }
 
-#no-margin {
-    margin: 0;
-  }
+#yes-margin {
+    margin: 0; 
+}
 
 @media (min-width: 1515px) {
     :is(.rows, .text-row) {
@@ -59,6 +59,14 @@
     .image3 {
         width: 100%;
         height: 64rem;
+    }
+
+    #no-margin {
+        margin: 0;
+      }
+
+    #yes-margin {
+       margin: 0 0 3rem 0; 
     }
 }
 
