--- a/Styles/styles-index.css
+++ b/Styles/styles-index.css
@@ -13,12 +13,7 @@
 }
 
 :is(.image1, .image2, .image3, .image4, .image5, .image6, .image7, .image8, .image9, .image10) {
-    display: flex;
-    width: 92vw;
-    border-radius: 1.25rem;
-    object-fit: cover;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
+    margin-inline: auto;
 }
 
 :is(.image3, .image4, .image7, .image8, .image9) {
@@ -42,10 +37,8 @@
     text-align: center;
     margin-block-start: 51.5vh;
     margin-block-end: auto;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    inset-inline-start: 0;
-    inset-inline-end: 0;
+    margin-inline: auto;
+    inset-inline: 0;
 }
 
 @media (min-width: 1515px) {
@@ -60,10 +53,6 @@
         flex-direction: row;
         margin: 0;
         align-items: center;
-    }
-
-    :is(.image1, .image2, .image3, .image4, .image5, .image6, .image7, .image8, .image9, .image10) {
-        border-radius: 2.5rem; 
     }
 
     :is(.image3, .image4) {
@@ -101,7 +90,7 @@
         flex-direction: row;
         align-items: center;
         max-width: 100%;
-        }
+    }
 
     :is(.image7, .image8, .image9, .image10) {
         height: 35rem;
@@ -111,12 +100,9 @@
     :is(.textoverimage1, .textoverimage2, .textoverimage3, .textoverimage4) {
         position: relative;
         font-size: 1.56rem; 
-        margin-block-start: 0;
-        margin-block-end: 0;
-        margin-inline-start: 0;
-        margin-inline-end: 0;
-        inset-inline-start: 0;
-        inset-inline-end: 0;
+        margin-block: 0;
+        margin-inline: 0;
+        inset-inline: 0;
         inset-block-start: 33rem;
     }
 
