--- a/Styles/styles-gardens.css
+++ b/Styles/styles-gardens.css
@@ -39,8 +39,7 @@
     .image1 {
         width: auto;
         object-fit: cover;
-        margin-inline-start: 0;
-        margin-inline-end: 0;
+        margin-inline: 0;
     }
 
     .image2 {
