--- a/Styles/styles-global.css
+++ b/Styles/styles-global.css
@@ -76,8 +76,7 @@ body {
 .credits {
   color: #0B1D27; 
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin-inline: auto;
   font-size: 0.375rem;
   font-family: Montserrat, Segoe UI;
   font-weight: 500; 
